# franka_cartesian_path_json

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration_results/: fr3_realsense_eye_on_base.calib
gripper_traj/: action_profiles_curvature chng.json  action_profiles_displacement.json  action_profiles_div(Force).json  action_profiles_eshelby.json  action_profiles_neural.json  action_profiles_pointnet.json  action_profiles_spectral displ..json  action_profiles_strain E.json  action_profiles_stressPK1.json  code_snippet.txt  waypoints_test.json  waypoints_test_camera.json  waypoints_test_dual.json  waypoints_test_dual_camera.json  waypoints_test_dual_increments.json  waypoints_test_dual_increments_rotation.json  waypoints_test_increments.json  waypoints_test_increments_rotation.json
launch/: launch.launch.py
scripts/: obs_recorder_node.py  plot_wrench_poses.py  readme_plot.md  realsense_recorder_node.py  recording_manager_node.py  wrench_logger_node.py
src/: franka_cartesian_path_json.cpp  franka_cartesian_path_json_dual.cpp  franka_cartesian_path_json_dual_increments.cpp  franka_cartesian_path_json_increments.cpp  franka_cartesian_path_json_moveit.cpp
